--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="dialog_body_gps_provider_disabled">GPS provider is disabled! 😞\nPlease enable it for location recording to work.</string>
     <string name="toast_gps_provider_enabled">GPS provider has been enabled 😃</string>
     <string name="toast_location_permissions_missing">Location permissions are necessary for location recording 😔</string>
+    <string name="toast_location_recording_auto_restart">We have been killed while recording. Continuing automatically.</string>
     <string name="backlog">Backlog:</string>
     <string name="backlog_locations">Locations:</string>
     <string name="backlog_distance">Distance:</string>
